# GraphicsRenderingEngine

./: .clang-format  .gitignore  BUILD_AND_RUN.md  BUILD_REQUIREMENTS.md  CMakeLists.txt  CODE_QUALITY_PLAN.md  CODE_QUALITY_QUICKSTART.md  CODING_STANDARDS.md  CUDA_README.md  IMPROVEMENT_PLAN.md  INSTALLATION_STATUS.md  NEGATIVE_POSITIONS_SUPPORT.md  README.md  README_WINDOWS.md  TESTING_PLAN.md  UI_README.md  WINDOWS_BUILD.md  Z_FIGHTING_DEBUG_PLAN.md  build-and-run.sh  build-ui.bat  build-ui.ps1  build-ui.sh  build.sh  color.h  image.ppm  img.ppm  imp.ppm  install-dependencies.sh  main.cpp  model.h  obj_loader.cpp  obj_loader.h  ray.h  ray_trace_cuda.cu  ray_trace_cuda.h  ray_trace_cuda_helper.cpp  renderer_api.cpp  renderer_api.h  rotation.h  run-ui.sh  (+8 more)
GraphicsRendererUI/: App.xaml  GraphicsRendererUI.csproj  MainWindow.xaml  ObservableObject.cs  RendererAPI.cs  run.sh
GraphicsRendererUI/Models/: SceneObject.cs
GraphicsRendererUI/ViewModels/: MainViewModel.cs
build-linux/: CMakeCache.txt  GraphicsRenderer  Makefile  cmake_install.cmake
build-ui/: CMakeCache.txt  Makefile  cmake_install.cmake
build_cuda/: CMakeCache.txt  GraphicsRenderer  Makefile  cmake_install.cmake
src/cpp/: camera_setup.h  color.h  constants.h  cuda_memory.h  cuda_utils.h  errors.cpp  errors.h  jpg_writer.cpp  light.h  main.cpp  model.h  ppm_to_jpg.cpp  ray.h  renderer_api.cpp  renderer_api.h  rotation.h  strong_types.h  transform.h  vec3.h  vertex.h
src/cuda/: ray_trace_cuda.cu  ray_trace_cuda.h  ray_trace_cuda_helper.cpp
ui/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RelayCommand.cs  RendererAPI.cs
ui/Models/: ISceneItem.cs  Light.cs  SceneObject.cs
ui/Utils/: BooleanToDegreesRadiansConverter.cs  DoubleConverter.cs  IntConverter.cs  JpgDecoder.cs  PpmDecoder.cs  TypeNameConverter.cs
ui/ViewModels/: MainViewModel.cs
